url-shortener/k8s/argocd/argocd-traefik-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-traefik-https
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - argocd.bidservice.store
      secretName: argocd-traefik-tls
  rules:
    - host: argocd.bidservice.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
